--- a/areamedica/endoscopia.html
+++ b/areamedica/endoscopia.html
@@ -51,54 +51,22 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="#" class="vMenu--active">Endoscopia</a></li>
-						<li><a href="#fibroscopia">Fibroscopia</a></li>
-						<li><a href="#endoscopia__nasale">Endoscopia nasale - laringea</a></li>
-						<li><a href="#otoscopia">Otoscopia</a></li>
+						<li><a href="#fibroendoscopia">Fibroendoscopia - Endoscopia rigida</a></li>
 					</ul>
 				</div>
 
 				<!--Main content -->
 				<div class="page__main">
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="fibroscopia">
+					<div class="expanded landing__section__medicine" id="fibroendoscopia">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Fibroscopia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
+									<h2 class="expanded__title">Fibroendoscopia - Endoscopia rigida</h2>
+									<p class="expanded__text">Mediante uso di telecamere digitalizzate vengono indagate l’anatomia delle prime vie aeree (fosse nasali, faringe e laringe) e dell’orecchio; si possono usare ottiche flessibili (fibroscopia) o ottiche rigide; sono esami assolutamente non dolorosi, di norma non viene usata anestesia; le immagini vengono salvate su video – cd o su carta fotografica.</p>
 								</div>
 								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
-								</div>
-							</div>
-						</div>
-					</div>
-					<!--Fine terapia -->
-					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="endoscopia__nasale">
-						<div class="container">
-							<div class="expanded__inner">
-								<div class="expanded__content">
-									<h2 class="expanded__title">Endoscopia nasale - laringea</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-								</div>
-								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
-								</div>
-							</div>
-						</div>
-					</div>
-					<!--Fine terapia -->
-					<!--Terapia -->
-					<div class="expanded landing__section__medicine" id="otoscopia">
-						<div class="container">
-							<div class="expanded__inner">
-								<div class="expanded__content">
-									<h2 class="expanded__title">Otoscopia</h2>
-									<p class="expanded__text">Lo studio di questa o quella parte del corpo</p>
-								</div>
-								<div class="expanded__media">
-									<img src="../images/b.jpeg" class="expanded__image">
+									<img src="../images/fibroendoscopia.jpeg" class="expanded__image">
 								</div>
 							</div>
 						</div>
