--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -51,7 +51,7 @@
 					<ul class="vMenu">
 						<li><a href="#" class="vMenu--active">Rinologia</a></li>
 						<li><a href="#esami__endoscopici">Esami endoscopici</a></li>
-						<li><a href="#rinometria">Rinometria e rinomanometria acustica</a></li>
+						<li><a href="#rinometria">Rinometria acustica e rinomanometria</a></li>
 						<li><a href="#citologia__nasale">Citologia nasale</a></li>
 					</ul>
 				</div>
@@ -78,7 +78,7 @@
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Rinometria e rinomanometria acustica</h2>
+									<h2 class="expanded__title">Rinometria acustica e rinomanometria</h2>
 									<p class="expanded__text">Sono esami fra loro complementari che permettono lo studio obiettivo della funzionalità respiratoria nasale senza nessun tipo di disturbo per il paziente; sono usate principalmente in previsione di interventi di Settoplastica o Turbinoplastica inferiore o come test per la roncopatia cronica.</p>
 								</div>
 								<div class="expanded__media">
