--- a/areamedica/vertigini.html
+++ b/areamedica/vertigini.html
@@ -54,7 +54,7 @@
 						<li><a href="#videonistagmografia">Videonistagmografia</a></li>
 						<li><a href="#vemps">VEMPs</a></li>
 						<li><a href="#rieducazione">Rieducazione vestibolare e posturale</a></li>
-						<li><a href="#posturografia">Posturografia</a></li>
+						<li><a href="#stabilometria">Stabilometria</a></li>
 					</ul>
 				</div>
 
@@ -106,11 +106,11 @@
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="posturografia">
+					<div class="expanded landing__section__medicine__inverse" id="stabilometrica">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
-									<h2 class="expanded__title">Posturografia</h2>
+									<h2 class="expanded__title">Stabilometria</h2>
 									<p class="expanded__text">Esame eseguito su pedana stabilometrica per lo studio dei disturbi dell’equilibrio legato a deficit posturali; nell’esame standard, mediante cinque test, vengono analizzate la capacità di controllo dell’equilibrio e la stabilità posturale del paziente soggetto in situazioni stabili o non stabili, attraverso interposizione di cuscino in gomma piuma, con e senza aiuto visivo; grazie alla metodica Visual Feedback risulta inoltre estremamente utile nella rieducazione vestibolare e posturale.</p>
 								</div>
 								<div class="expanded__media">
