--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="hero__content">
 					<div class="hero__content__inner" id='navConverter'>
 						<h1 class="hero__title">Dott. Paolo Bari</h1>
-						<p class="hero__text">Il dott. Paolo Bari &#232; un otorinolaringoiatra della citt&#224; di Vicenza. Qui aggiungiamo un po' di testo giusto giusto per scrivere due righe introduttive</p>
+						<p class="hero__text">Medico Chirurgo specialista in Otorinolaringoiatria</p>
 						<a href="contatti.html" class="button button__accent">Dove trovarmi</a>
 						<a href="areamedica.html" class="button hero__button">Scopri di pi&#249;</a>
 					</div>
@@ -56,33 +56,33 @@
 	<!-- Section 1 -->
 	<div class="steps landing__section">
 		<div class="container">
-			<h2>Dove lavoro?</h2>
-			<p>Attualmente è possibile contattare i seguenti centri per prendere un appuntamento con il dottore</p>
+			<h2>Dove trovarmi?</h2>
+			<p>Per richieste di visite specialistiche potete contattare i seguenti centri:</p>
 		</div>
 		<div class="container">
 			<div class="steps__inner">
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2790.8190929620982!2d11.398031750445544!3d45.614279331336206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477f4ae8d5eedc3f%3A0xb8c5c1a3727c4547!2s36073%20Montepulgo%20VI!5e0!3m2!1sit!2sit!4v1619088481626!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Vicenza</h3>
-					<p>Nome dello Studio medico di Vicenza<br>Telefono: 0444 923876</p>
+					<p>Centro di Medicina Vicenza<br>Telefono: 0444 282626</p>
 					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Bassano</h3>
-					<p>Nome dello Studio medico di Bassano<br>Telefono: 0444 923876</p>
+					<p>Centro di Medicina di Bassano del Grappa<br>Telefono: 0424 509845</p>
 					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
 					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1400.5349899327482!2d11.886011192767873!3d45.407928396048725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477eda58121508c7%3A0xce9bf01594057558!2sEdificio%20Paolotti%2C%20Via%20Giambattista%20Belzoni%2C%207%2C%2035121%20Padova%20PD!5e0!3m2!1sit!2sit!4v1571318420037!5m2!1sit!2sit" style="border:none;"></iframe> 
+						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
 					<h3>Schio</h3>
-					<p>Nome dello Studio medico di Schio<br>Telefono: 0444 923876</p>
+					<p>Campusalute Schio<br>Telefono: 0445 523779</p>
 					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Area Medica</h2>
-					<p class="expanded__text">Il dott. Paolo Bari offre diversi tipi di terapie come questo o quell'altro, altre cose da scrivere e poi un bel rimando completo per tutte le info all'interno dell'apposita pagina, ti bastera cliccare sul bottone Scopri di pi&#249; qui sotto, verde, bello verde, testo a caso lorem ipsum dolores inct </p>
+					<p class="expanded__text">Il dott. Paolo Bari si occupa di tutte le patologie dei distretti di pertinenza ORL utilizzando innovativi sistemi diagnostici. Si occupa dei disturbi dell'equilibrio (vertigini) e dei disturbi neuroposturali (otoneurologia)</p>
 					<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
 				</div>
 			</div>
@@ -127,8 +127,7 @@
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Blog</h2>
-					<p class="expanded__text">Resta aggiornato su tutte le novit&#224; relative al dottore.
-					Articoli, news e tante altre cose da scoprire, testo a caso giusto per riempire un po' lo spazio sottostante relativo a questa sezione</p>
+					<p class="expanded__text">Leggi news, notizie e articoli medici relativi alla attivit&#224; professionale</p>
 					<a href="blog.html" class="button button__accent">Scopri di pi&#249;</a>
 				</div>
 			</div>
@@ -138,8 +137,8 @@
 	<div class="cta cta--reverse">
 		<div class="container">
 			<div class="cta__inner">
-				<h2 class="cta__title">Prenota ora una visita</h2>
-				<p class="cta__sub cta__sub--center">Contatta il centro medico pi&#249; comodo alla tua posizione per prendere un appuntamento con il dott. Paolo Bari</p>
+				<h2 class="cta__title">Prenota una visita</h2>
+				<p class="cta__sub cta__sub--center">Contatta il Centro Medico pi&#249; vicino per prendere un appuntamento con il dott. Paolo Bari</p>
 				<a href="contatti.html" class="button button__accent">Contattaci</a>
 			</div>
 		</div>
