--- a/blog.html
+++ b/blog.html
@@ -97,6 +97,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="cta cta--reverse">
+		<div class="container">
+			<div class="cta__inner">
+				<h2 class="cta__title">Prenota ora una visita</h2>
+				<p class="cta__sub cta__sub--center">Contatta il centro medico pi&#249; comodo alla tua posizione per prendere un appuntamento con il dott. Paolo Bari</p>
+				<a href="contatti.html" class="button button__accent">Contattaci</a>
+			</div>
+		</div>
+	</div>
 <script src='js/app.js'></script>
 </body>
 </html>
