--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 		<div class="container">
 			<div class="expanded__inner">
 				<div class="expanded__media">
-					<img src="./images/doctor.svg" class="expanded__image">
+					<img src="./images/dott.png" class="expanded__image">
 				</div>
 				<div class="expanded__content">
 					<h2 class="expanded__title">Dott. Paolo Bari</h2>
