--- a/index.html
+++ b/index.html
@@ -1,182 +1,39 @@
-<!DOCTYPE html>
-<html lang='it'>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it">
+
 <head>
-	<title>Homepage - Dott. Paolo Bari</title>
-	<meta class="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari" />
+    <title>Dott. Paolo Bari</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="description"
+        content="Online very soon" />
     <meta name="author" content="Francesco Bari" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link rel="icon" type="image/gif" href="images/icon.svg" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Script-Type" content="text/javascript" />
+    <!-- Only Desktop -->
+    <link rel="stylesheet" type="text/css" href="./CSS/styledesktop.css" />
+    <!-- Icon -->
+    <link rel="icon" href="./img/icon.svg" type="image/gif" />
+
+    <!-- Javascript -->
+    <script src="./JS/script.js" type="text/javascript" charset="utf-8"></script>
+
 </head>
 
 <body>
-	<!-- Navbar -->
-	<div class="navbar navbar--extended">
-		<nav class="nav__mobile"></nav>
-		<div class="container">
-			<div class="navbar__inner">
-				<a href="#" class="navbar__logo">Dott. Paolo Bari</a>
-				<nav class="navbar__menu">
-					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="contatti.html">Contatti</a></li>
-						<li><a href="dottore.html">Dottore</a></li>
-						<li><a href="areamedica.html">Area Medica</a></li>
-						<li><a href="blog.html">Blog</a></li>
-					</ul>
-				</nav>
-				<div class="navbar__menu-mob"><a href="" id='toggle'><svg role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" class=""></path></svg></a></div>
-			</div>
-		</div>
-	</div>
-	<!-- Header landing page -->
-	<div class="hero">
-		<div class="hero__overlay hero__overlay--gradient"></div>
-		<div class="hero__inner">
-			<div class="container">
-				<div class="hero__content">
-					<div class="hero__content__inner" id='navConverter'>
-						<h1 class="hero__title">Dott. Paolo Bari</h1>
-						<p class="hero__text">Medico Chirurgo specialista in Otorinolaringoiatria</p>
-						<a href="contatti.html" class="button button__accent">Dove trovarmi</a>
-						<a href="areamedica.html" class="button hero__button">Scopri di pi&#249;</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Autoscroll row -->
-	<div class="hero__sub">
-		<span id="scrollToNext" class="scroll">
-			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
-		</span>
-	</div>
-	<!-- Section 1 -->
-	<div class="steps landing__section">
-		<div class="container">
-			<h2>Dove trovarmi?</h2>
-			<p>Per richieste di visite specialistiche potete contattare i seguenti centri:</p>
-		</div>
-		<div class="container">
-			<div class="steps__inner">
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-					<h3>Vicenza</h3>
-					<p>Centro di Medicina Vicenza<br>Telefono: 0444 282626</p>
-					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
-				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-					<h3>Bassano</h3>
-					<p>Centro di Medicina di Bassano del Grappa<br>Telefono: 0424 509845</p>
-					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
-				</div>
-				<div class="step">
-					<div class="step__media">
-						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
-        			</div>
-					<h3>Schio</h3>
-					<p>Campusalute Schio<br>Telefono: 0445 523779</p>
-					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Section 2 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/dott.png" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Dott. Paolo Bari</h2>
-					<p class="expanded__text">Il Dott. Paolo Bari è il responsabile dello studio di Otorinolaringoiatria; si è laureato in Medicina e Chirurgia presso l’Università degli Studi di Verona nel Marzo 1987.  Nel 1990 si è diplomato specialista in Otorinolaringoiatria sempre presso l’Università di Verona.  Dal ’91 al ’97 ha lavorato presso l’Ospedale civile di Vicenza, reparto di Otorinolaringoiatria.  Dal 1997 al 2010 ha svolto il ruolo di responsabile del servizio ORL presso la Casa di cura Eretenia – Vicenza.
-					Attualmente svolge l’attività ambulatoriale esclusivamente nel suo studio privato e l’attività chirurgica convenzionata presso la Casa di cura Eretenia, in qualità di consulente.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Section 3 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/check.svg" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Area Medica</h2>
-					<p class="expanded__text">Il dott. Paolo Bari si occupa di tutte le patologie dei distretti di pertinenza ORL utilizzando innovativi sistemi diagnostici. Si occupa dei disturbi dell'equilibrio (vertigini) e dei disturbi neuroposturali (otoneurologia)</p>
-					<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Section 4 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/blog.svg" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Blog</h2>
-					<p class="expanded__text">Leggi news, notizie e articoli medici relativi alla attivit&#224; professionale</p>
-					<a href="blog.html" class="button button__accent">Scopri di pi&#249;</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Blue area -->
-	<div class="cta cta--reverse">
-		<div class="container">
-			<div class="cta__inner">
-				<h2 class="cta__title">Prenota una visita</h2>
-				<p class="cta__sub cta__sub--center">Contatta il Centro Medico pi&#249; vicino per prendere un appuntamento con il dott. Paolo Bari</p>
-				<a href="contatti.html" class="button button__accent">Contattaci</a>
-			</div>
-		</div>
-	</div>
-	<!-- Footer -->
-	<div class="footer footer--dark">
-		<div class="container">
-			<div class="footer__inner">
-				<a href="index.html" class="footer__textLogo">Dott. Paolo Bari</a>
-				<div class="footer__data">
-					<div class="footer__data__item">
-						<div class="footer__row">
-							Creato da <a href="https://github.com/cescomuch" target="_blank" class="footer__link">Francesco Bari</a>
-						</div>
-						<div class="footer__row">Under <a href="https://opensource.org/licenses/MIT" target="_blank" class="footer__link">MIT License</a>
-						</div>
-					</div>
-					<div class="footer__data__item">
-						<div class="footer__row">Creato per <a href="https://paolobari.it" target="_blank" class="footer__link">Dott. Paolo Bari</a>
-						</div>
-					</div>
-					<div class="footer__data__item">
-					<div class="footer__row">
-						<a href="https://paolobari.it" target="_blank" class="footer__link">Facebook</a>
-					</div>
-					<div class="footer__row">
-						<a href="https://paolobari.it" target="_blank" class="footer__link">Twitter</a>
-					</div>
-					<div class="footer__row">
-						<a href="https://paolobari.it" target="_blank" class="footer__link">Instagram</a>
-					</div>
-					<div class="footer__row">
-						<a href="https://paolobari.it" class="footer__link">Altre cose</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-<script src='js/app.js'></script>
+
+	<div class="container">
+		<h4 id="headline">Online soon:</h4>
+  			<div id="countdown">
+    			<ul>
+     				<li><span id="days"></span>giorni</li>
+      				<li><span id="hours"></span>ore</li>
+      				<li><span id="minutes"></span>Minuti</li>
+      				<li><span id="seconds"></span>Secondi</li>
+    			</ul>
+  			</div>
+</div>
+
 </body>
+
 </html>
