--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <!-- Javascript -->
     <script src="./JS/script.js" type="text/javascript" charset="utf-8"></script>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200627659-1"></script>
+  
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-200627659-1');
+  </script>
+
 </head>
 
 <body>
