--- a/contatti.html
+++ b/contatti.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang='it'>
 <head>
-	<title>Homepage - Dott. Paolo Bari</title>
+	<title>Contatti - Dott. Paolo Bari</title>
 	<meta class="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Sito del dott. Paolo Bari, otorinolaringoiatra di Vicenza" />
-    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dott paolo bari,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,dottor Bari,centro medicina,centro medicina vicenza" />
+	<meta name="description" content="Prenota una visita con il dott. Paolo Bari" />
+    <meta name="keywords" content="Paolo,Bari,Paolo Bari,dottor,dottore,dott,otorino,otorinolaringoiatra,medico,Vicenza,dr,otorino Vicenza,contatti,numero,dove lavora,studio,dove,dove trovarlo,dottor Bari" />
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style_min.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
 </head>
-
 <body>
-	<!-- Navbar -->
 	<div class="navbar navbar--extended">
 		<nav class="nav__mobile"></nav>
 		<div class="container">
 			<div class="navbar__inner">
-				<a href="#" class="navbar__logo">Dott. Paolo Bari</a>
+				<a href="index.html" class="navbar__logo">Dott. Paolo Bari</a>
 				<nav class="navbar__menu">
 					<ul>
-						<li><a href="#">Home</a></li>
-						<li><a href="contatti.html">Contatti</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="#">Contatti</a></li>
 						<li><a href="dottore.html">Dottore</a></li>
 						<li><a href="areamedica.html">Area Medica</a></li>
 						<li><a href="blog.html">Blog</a></li>
@@ -31,120 +29,57 @@
 			</div>
 		</div>
 	</div>
-	<!-- Header landing page -->
-	<div class="hero">
+	<!-- Hero unit -->
+	<div class="page__header">
 		<div class="hero__overlay hero__overlay--gradient"></div>
-		<div class="hero__inner">
+		<div class="page__header__inner">
 			<div class="container">
-				<div class="hero__content">
-					<div class="hero__content__inner" id='navConverter'>
-						<h1 class="hero__title">Dott. Paolo Bari</h1>
-						<p class="hero__text">Medico Chirurgo specialista in Otorinolaringoiatria</p>
-						<a href="contatti.html" class="button button__accent">Dove trovarmi</a>
-						<a href="areamedica.html" class="button hero__button">Scopri di pi&#249;</a>
+				<div class="page__header__content">
+					<div class="page__header__content__inner" id='navConverter'>
+						<h1 class="hero__title">Contatti</h1>
+						<p class="hero__text">Per richieste di visite specialistiche potete contattare i seguenti centri:</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- Autoscroll row -->
 	<div class="hero__sub">
 		<span id="scrollToNext" class="scroll">
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" class='hero__sub__down' fill="currentColor" width="512px" height="512px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,298.3L256,298.3L256,298.3l174.2-167.2c4.3-4.2,11.4-4.1,15.8,0.2l30.6,29.9c4.4,4.3,4.5,11.3,0.2,15.5L264.1,380.9c-2.2,2.2-5.2,3.2-8.1,3c-3,0.1-5.9-0.9-8.1-3L35.2,176.7c-4.3-4.2-4.2-11.2,0.2-15.5L66,131.3c4.4-4.3,11.5-4.4,15.8-0.2L256,298.3z"/></svg>
 		</span>
 	</div>
-	<!-- Section 1 -->
+	<!-- Page content -->
 	<div class="steps landing__section">
-		<div class="container">
-			<h2>Dove trovarmi?</h2>
-			<p>Per richieste di visite specialistiche potete contattare i seguenti centri:</p>
-		</div>
 		<div class="container">
 			<div class="steps__inner">
 				<div class="step">
+				<h2>Vicenza</h2>
 					<div class="step__media">
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11177.005983295054!2d11.5141766!3d45.5452661!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x40ef0466e1b44389!2sCentro%20di%20Medicina!5e0!3m2!1sit!2sit!4v1622280084719!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h3>Vicenza</h3>
-					<p>Centro di Medicina Vicenza<br>Telefono: 0444 282626</p>
+					<p><b>Centro di Medicina Vicenza</b><br>Telefono: 0444 282626</p>
 					<a href="contatti/vicenza.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
+					<h2>Bassano</h2>
 					<div class="step__media">
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11133.37076729063!2d11.7177881!3d45.764322!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7d3da05937dc288d!2sCentro%20Medico%20Riabilitativo%20-%20Centro%20di%20medicina%20Bassano%20del%20Grappa!5e0!3m2!1sit!2sit!4v1622280236818!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h3>Bassano</h3>
-					<p>Centro di Medicina di Bassano del Grappa<br>Telefono: 0424 509845</p>
+        			<p><b>Centro di Medicina di Bassano del Grappa</b><br>Telefono: 0424 509845</p>
 					<a href="contatti/bassano.html" class="button button__accent">Prenota ora</a>
 				</div>
 				<div class="step">
+					<h2>Schio</h2>
 					<div class="step__media">
 						 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11144.204935977836!2d11.357972!3d45.710009!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x568c7c3c46165577!2sCampusalute%20Schio!5e0!3m2!1sit!2sit!4v1622280340576!5m2!1sit!2sit" style="border:none;"></iframe> 
         			</div>
-					<h3>Schio</h3>
-					<p>Campusalute Schio<br>Telefono: 0445 523779</p>
+        			<p><b>Campusalute Schio</b><br>Telefono: 0445 523779</p>
 					<a href="contatti/schio.html" class="button button__accent">Prenota ora</a>
 				</div>
 			</div>
 		</div>
 	</div>
-	<!-- Section 2 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/dott.png" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Dott. Paolo Bari</h2>
-					<p class="expanded__text">Laureato in Medicina e Chirurgia presso l'Universit&#224; degli Studi di Verona, specializzatosi poi in Otorinolaringoiatria.<br>
-					Ha lavorato presso il reparto ORL dell'Ospedale Civile (O.C.) di Vicenza e come Responsabile ORL presso la Casa di cura Eretenia a Vicenza.<br> Oltre alla normale attivit&#224; chirurgica e ambulatoriale, ha partecipato all'attivit&#224; del Centro Protesi Fonatorie per Laringectomizzati e al Centro di Audiologia e Chirurgia dell'orecchio, all'Ospedale Civile di Vicenza.<br>
-					Si &#232; dedicato, e si dedica tuttora alla citologia nasale, allo studio delle vertigini e dei disturbi dell'equilibrio, alla riabilitazione neuroposturale e alla riabilitazione uditiva - fonatoria.<br>
-					Ha partecipato come relatore a numerosi congressi nazionali e internazionali, riguardanti in particolare: protesi fonatorie, vertigini, disturbi dell'equilibrio, patologie naso - sinusali e patologie posturali.</p>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Section 3 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/area2.png" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Area Medica</h2>
-					<p class="expanded__text">Il dott. Paolo Bari si occupa di tutte le patologie dei distretti di pertinenza ORL utilizzando innovativi sistemi diagnostici. Si occupa dei disturbi dell'equilibrio (Vertigini) e dei disturbi neuroposturali (Otoneurologia)</p>
-					<a href="areamedica.html" class="button button__accent">Scopri di pi&#249;</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Section 4 -->
-	<div class="expanded landing__section">
-		<div class="container">
-			<div class="expanded__inner">
-				<div class="expanded__media">
-					<img src="./images/blog.svg" class="expanded__image">
-				</div>
-				<div class="expanded__content">
-					<h2 class="expanded__title">Blog</h2>
-					<p class="expanded__text">Leggi news, notizie e articoli medici relativi alla attivit&#224; professionale</p>
-					<a href="blog.html" class="button button__accent">Scopri di pi&#249;</a>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- Blue area -->
-	<div class="cta cta--reverse">
-		<div class="container">
-			<div class="cta__inner">
-				<h2 class="cta__title">Prenota una visita</h2>
-				<p class="cta__sub cta__sub--center">Contatta il Centro Medico pi&#249; vicino per prendere un appuntamento con il dott. Paolo Bari</p>
-				<a href="contatti.html" class="button button__accent">Contattaci</a>
-			</div>
-		</div>
-	</div>
+	<br>
 	<!-- Footer -->
 	<div class="footer footer--dark">
 		<div class="container">
