--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <meta name="author" content="Francesco Bari" />
 	<link rel="stylesheet" type="text/css" href="css/style_min.css" />
 	<link rel="icon" type="image/gif" href="images/icon.svg" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+  	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-200627659-1"></script>
+  	<script>
+    	window.dataLayer = window.dataLayer || [];
+    	function gtag(){dataLayer.push(arguments);}
+    	gtag('js', new Date());
+
+    	gtag('config', 'UA-200627659-1');
+  	</script>
 </head>
 
 <body>
