--- a/areamedica.html
+++ b/areamedica.html
@@ -52,10 +52,10 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="#" class="vMenu--active">Area Medica</a></li>
-						<li><a href="./areamedica/audiologia.html">Audiologia</a></li>
-						<li><a href="./areamedica/rinologia.html">Rinologia</a></li>
-						<li><a href="./areamedica/endoscopia.html">Endoscopia</a></li>
-						<li><a href="./areamedica/vertigini.html">Vertigini</a></li>
+						<li><a href="./areamedica/audiologia.html">- Audiologia</a></li>
+						<li><a href="./areamedica/rinologia.html">- Rinologia</a></li>
+						<li><a href="./areamedica/endoscopia.html">- Endoscopia</a></li>
+						<li><a href="./areamedica/vertigini.html">- Vertigini</a></li>
 					</ul>
 				</div>
 
