--- a/areamedica/audiologia.html
+++ b/areamedica/audiologia.html
@@ -51,10 +51,10 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="../areamedica.html" class="vMenu--active">Torna ad 'Area Medica'</a></li>
-						<li><a href="#audiometria">Audiometria</a></li>
-						<li><a href="#impedenzometria">Impedenzometria</a></li>
-						<li><a href="#otomicroscopia">Otomicroscopia</a></li>
-						<li><a href="#ABR">ABR</a></li>
+						<li><a href="#audiometria">- Audiometria</a></li>
+						<li><a href="#impedenzometria">- Impedenzometria</a></li>
+						<li><a href="#otomicroscopia">- Otomicroscopia</a></li>
+						<li><a href="#ABR">- ABR</a></li>
 					</ul>
 				</div>
 
