--- a/areamedica/endoscopia.html
+++ b/areamedica/endoscopia.html
@@ -51,7 +51,7 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="../areamedica.html" class="vMenu--active">Torna ad 'Area Medica'</a></li>
-						<li><a href="#fibroendoscopia">Fibroendoscopia - Endoscopia rigida</a></li>
+						<li><a href="#fibroendoscopia">- Fibroendoscopia - Endoscopia rigida</a></li>
 					</ul>
 				</div>
 
