--- a/areamedica/rinologia.html
+++ b/areamedica/rinologia.html
@@ -50,9 +50,9 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="../areamedica.html" class="vMenu--active">Torna ad 'Area Medica'</a></li>
-						<li><a href="#esami__endoscopici">Esami endoscopici</a></li>
-						<li><a href="#rinometria">Rinometria acustica e rinomanometria</a></li>
-						<li><a href="#citologia__nasale">Citologia nasale</a></li>
+						<li><a href="#esami__endoscopici">- Esami endoscopici</a></li>
+						<li><a href="#rinometria">- Rinometria acustica e rinomanometria</a></li>
+						<li><a href="#citologia__nasale">- Citologia nasale</a></li>
 					</ul>
 				</div>
 
