--- a/areamedica/vertigini.html
+++ b/areamedica/vertigini.html
@@ -51,10 +51,10 @@
 				<div class="page__menu">
 					<ul class="vMenu">
 						<li><a href="../areamedica.html" class="vMenu--active">Torna ad 'Area Medica'</a></li>
-						<li><a href="#videonistagmografia">Videonistagmografia</a></li>
-						<li><a href="#vemps">VEMPs</a></li>
-						<li><a href="#rieducazione">Rieducazione vestibolare e posturale</a></li>
-						<li><a href="#stabilometria">Stabilometria</a></li>
+						<li><a href="#videonistagmografia">- Videonistagmografia</a></li>
+						<li><a href="#vemps">- VEMPs</a></li>
+						<li><a href="#rieducazione">- Rieducazione vestibolare e posturale</a></li>
+						<li><a href="#stabilometria">- Stabilometria</a></li>
 					</ul>
 				</div>
 
@@ -106,7 +106,7 @@
 					</div>
 					<!--Fine terapia -->
 					<!--Terapia -->
-					<div class="expanded landing__section__medicine__inverse" id="stabilometrica">
+					<div class="expanded landing__section__medicine__inverse" id="stabilometria">
 						<div class="container">
 							<div class="expanded__inner">
 								<div class="expanded__content">
